unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/Cesion_a_Otra_Persona_Fisica_o_Moral__c.object-meta.xml
<CustomObject>
    <label>Cesión a Otra Persona Física o Moral</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Cesión Persona Física o Moral</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cesiones a Otra Persona Física o Moral</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>