unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Accionista_1__c.field-meta.xml
<CustomField>
    <fullName>Accionista_1__c</fullName>
    <label>Accionista 1 Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>