unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Accionistas_2__c.field-meta.xml
<CustomField>
    <fullName>Accionistas_2__c</fullName>
    <label>Accionistas 2 Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>