unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Accionistas_3__c.field-meta.xml
<CustomField>
    <fullName>Accionistas_3__c</fullName>
    <label>Accionistas 3 Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>