unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Actividad_Profesion_Ocupacion__c.field-meta.xml
<CustomField>
    <fullName>Actividad_Profesion_Ocupacion__c</fullName>
    <label>Objeto Social o Giro Mercantil Cesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADMINISTRACION - ASISTENTES ADMINISTRATIVOS</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - CAPTURISTA Y OPERADORES DE TELEFONO</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - CONSULTORES</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - CONTADORES Y AUDITORES</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - DIRECTORES, GERENTES  Y EMPLEADOS DE COMPRAS, FINANZAS, RECURSOS HUMANOS Y SERVICIOS ADMINISTRATIVOS</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - DIRECTORES, GERENTES Y EMPELADOS ADMINISTRATIVOS</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - DIRECTORES, GERENTES Y EMPLEADOS DE COMERCIALIZACION</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - DIRECTORES, GERENTES Y EMPLEADOS DE PRODUCCION</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - DIRECTORES, GERENTES Y EMPLEADOS DE SERVICIOS DE TRANSPORTE</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - PAGADORES Y COBRADORES</fullName>
            </value>
            <value>
                <fullName>ADMINISTRACION - TRABAJADORES DE ARCHIVO, ALMACEN DE INVENTARIOS</fullName>
            </value>
            <value>
                <fullName>AGRICULTURA Y SILVICULTURA - ADMINISTRADORES O TRABAJADORES AGRICOLAS</fullName>
            </value>
            <value>
                <fullName>AGRICULTURA Y SILVICULTURA - ADMINISTRADORES O TRABAJADORES SILVICOLAS Y FORESTALES</fullName>
            </value>
            <value>
                <fullName>ALIMENTACION Y HOSPEDAJE - JEFES DE COCINA, RESTAURANTE Y/O BAR</fullName>
            </value>
            <value>
                <fullName>ALIMENTACION Y HOSPEDAJE - TRABAJADORES DE SERVICIO DE ALIMENTOS Y BEBIDAS</fullName>
            </value>
            <value>
                <fullName>ALIMENTACION Y HOSPEDAJE - TRABAJADORES DE SERVICIOS DE ALOJAMIENTO</fullName>
            </value>
            <value>
                <fullName>ALIMENTOS Y BEBIDAS - TRABAJADORES EN LA ELABORACION  Y PROCESAMIENTO DE ALIMENTOS, BEBIDAS Y TABACO</fullName>
            </value>
            <value>
                <fullName>BOLSA, BANCA Y SEGUROS - AGENTES DE VALORES, PROMOTORES Y CORREDORES DE INVERSION</fullName>
            </value>
            <value>
                <fullName>BOLSA, BANCA Y SEGUROS - GERENTES O TRABAJADORES DE SERVICIOS Y PRODUCTOS FINANCIEROS</fullName>
            </value>
            <value>
                <fullName>BOLSA, BANCA Y SEGUROS - VALUADORES</fullName>
            </value>
            <value>
                <fullName>COMERCIO - CAJEROS REGISTRADORES</fullName>
            </value>
            <value>
                <fullName>COMERCIO - DESPACHADORES DE GASOLINERA</fullName>
            </value>
            <value>
                <fullName>COMERCIO - EMPACADORES DE MERCANCIAS</fullName>
            </value>
            <value>
                <fullName>COMERCIO - GERENTES O EMPLEADOS DE VENTAS</fullName>
            </value>
            <value>
                <fullName>COMERCIO - GERENTES O SUPERVISOR DE ESTABLECIMIENTO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>COMERCIO - REPRESENTANTES DE VENTAS POR TELEFONO O POR TELEVISION</fullName>
            </value>
            <value>
                <fullName>COMERCIO - TAQUILLEROS</fullName>
            </value>
            <value>
                <fullName>COMERCIO - VENDEDORES AMBULANTES</fullName>
            </value>
            <value>
                <fullName>COMERCIO - VENDEDORES ESPECIALIZADOS</fullName>
            </value>
            <value>
                <fullName>CONSTRUCCION -  INGENIEROS, TECNICOS Y OPERADORES DE LA CONSTRUCCION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>