unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Apellido_Paterno__c.field-meta.xml
<CustomField>
    <fullName>Apellido_Paterno__c</fullName>
    <label>Apellido Paterno Cesión</label>
    <length>30</length>
    <type>Text</type>
</CustomField>