unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Autoridad_Emite_Identifiacion__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_Emite_Identifiacion__c</fullName>
    <label>Autoridad Emite Identifiación Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>