unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Autoridad_Emite_Identifiacion_Cesion__c.field-meta.xml
<CustomField>
    <fullName>Autoridad_Emite_Identifiacion_Cesion__c</fullName>
    <label>Autoridad Emite Identifiación Cesión</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_Identificacion__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Autoridad_Identificacion</valueSetName>
    </valueSet>
</CustomField>