unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Cesion__c.field-meta.xml
<CustomField>
    <fullName>Cesion__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Cesion_a_Otra_Persona_Fisica_o_Moral__c/&quot; &amp; Id &amp; &quot;/view&quot;, 
										 IF( RecordType.Name = &quot;Persona Física&quot;, 
													     Name &amp; &quot; - &quot; &amp; Nombre__c &amp; &quot; &quot; &amp; Apellido_Paterno__c &amp; &quot; &quot; &amp; Apellido_Materno__c,
										        Name &amp; &quot; - &quot; &amp; Denominaci_n_o_Raz_n_Social__c
										    )
										)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cesión</label>
    <type>Text</type>
</CustomField>