unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Check_Direccion_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Check_Direccion_Laboral__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Dirección Laboral Cesión</label>
    <type>Checkbox</type>
</CustomField>