unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Check_Direccion_Principal__c.field-meta.xml
<CustomField>
    <fullName>Check_Direccion_Principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Dirección Principal Cesión</label>
    <type>Checkbox</type>
</CustomField>