unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Check_List_Sub_Tipo_Fiscal__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Sub_Tipo_Fiscal__c</fullName>
    <label>Check List Sub Tipo Fiscal Cesión</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clave Única de Registro de Población</fullName>
            </value>
            <value>
                <fullName>R1: Alta en SHCP</fullName>
            </value>
            <value>
                <fullName>Recibos de Nómina de los últimos 3 meses</fullName>
            </value>
            <value>
                <fullName>Comprobante de Domicilio</fullName>
            </value>
            <value>
                <fullName>Copia de su Identificación Oficial (IFE o Pasaporte)</fullName>
            </value>
            <value>
                <fullName>Comprobante de Domicilio de la persona moral</fullName>
            </value>
            <value>
                <fullName>Cédula de Identificación Fiscal expedida por el SAT</fullName>
            </value>
            <value>
                <fullName>Escritura Pública o documento que sirva para acreditar su legal existencia</fullName>
            </value>
            <value>
                <fullName>Copia certificada que comprueba las facturas del servidor público</fullName>
            </value>
            <value>
                <fullName>INE del Representante Legal, para Extranjeros: el pasaporte o documento de migración que acredite su legal estancia en el país.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>