unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Clave_pais_form__c.field-meta.xml
<CustomField>
    <fullName>Clave_pais_form__c</fullName>
    <formula>TEXT(Pais_de_Nacimiento__r.CodigoPais__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clave país Cesión</label>
    <type>Text</type>
</CustomField>