unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal Cesión</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Codigo_Postal__c.Municipio__c</field>
            <operation>equals</operation>
            <valueField>$Source.Municipio__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Codigo_Postal__c</referenceTo>
    <relationshipLabel>Cesiones a Otra Persona Física o Moral</relationshipLabel>
    <relationshipName>Cesiones_a_Otra_Persona_F_sica_o_Moral</relationshipName>
    <type>Lookup</type>
</CustomField>