unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Colonia__c.field-meta.xml
<CustomField>
    <fullName>Colonia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia Cesión</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Colonia__c.Codigo_PostalLookup__c</field>
            <operation>equals</operation>
            <valueField>$Source.Codigo_Postal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Cesiones a Otra Persona Física o Moral</relationshipLabel>
    <relationshipName>Cesiones_a_Otra_Persona_F_sica_o_Moral</relationshipName>
    <type>Lookup</type>
</CustomField>