unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Conoce_a_la_persona__c.field-meta.xml
<CustomField>
    <fullName>Conoce_a_la_persona__c</fullName>
    <description>¿Conoce a la persona a la cual se está solicitando la escritura del inmueble?</description>
    <inlineHelpText>¿Conoce a la persona a la cual se está solicitando la escritura del inmueble?</inlineHelpText>
    <label>¿Conoce a la persona? Cesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>