unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Correo_Electronico_Cesion_Rep_Legal__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Cesion_Rep_Legal__c</fullName>
    <label>Correo Electrónico Cesión Rep Legal</label>
    <type>Email</type>
</CustomField>