unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/CURP__c.field-meta.xml
<CustomField>
    <fullName>CURP__c</fullName>
    <label>CURP Cesión</label>
    <length>18</length>
    <type>Text</type>
</CustomField>