unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Denominaci_n_o_Raz_n_Social__c.field-meta.xml
<CustomField>
    <fullName>Denominaci_n_o_Raz_n_Social__c</fullName>
    <label>Denominación o Razón Social Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>