unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Dictaminacion__c.field-meta.xml
<CustomField>
    <fullName>Dictaminacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dictaminación Cesión</label>
    <referenceTo>Dictaminacion__c</referenceTo>
    <relationshipLabel>Cesiones a Otra Persona Física o Moral</relationshipLabel>
    <relationshipName>Cesiones_a_Otra_Persona_F_sica_o_Moral</relationshipName>
    <type>Lookup</type>
</CustomField>