unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Director_General__c.field-meta.xml
<CustomField>
    <fullName>Director_General__c</fullName>
    <label>Director General Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>