unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Domicilio_del_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Domicilio_del_Trabajo__c</fullName>
    <label>Domicilio del Trabajo Cesión</label>
    <length>150</length>
    <type>Text</type>
</CustomField>