unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Edad__c.field-meta.xml
<CustomField>
    <fullName>Edad__c</fullName>
    <formula>(TODAY () -  Fecha_de_Nacimiento__c)/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad Cesión</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>