unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Escritura_a_favor_de_un_Tercero__c.field-meta.xml
<CustomField>
    <fullName>Escritura_a_favor_de_un_Tercero__c</fullName>
    <formula>TEXT(Contrato__r.Escritura_a_favor_de_un_Tercero__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Escritura a favor de un Tercero Cesión</label>
    <type>Text</type>
</CustomField>