unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Escritura_Poliza_o_Acta__c.field-meta.xml
<CustomField>
    <fullName>Escritura_Poliza_o_Acta__c</fullName>
    <label>Escritura, Póliza o Acta Cesión</label>
    <length>20</length>
    <type>Text</type>
</CustomField>