unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Est_de_acuerdo_en_aportar_los_recursos__c.field-meta.xml
<CustomField>
    <fullName>Est_de_acuerdo_en_aportar_los_recursos__c</fullName>
    <description>¿Está de acuerdo en aportar los recursos?</description>
    <label>Está de acuerdo en aportar los recursos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>