unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Evalua_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Evalua_Monitor__c</fullName>
    <formula>IF(NOT(Check_Direccion_Principal__c), &quot;1&quot;,
    IF(Check_Direccion_Principal__c , &quot;2&quot;,
&quot;1&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evalua Monitor Cesión</label>
    <type>Text</type>
</CustomField>