unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Fecha_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Nacimiento__c</fullName>
    <label>Fecha de Nacimiento Cesión</label>
    <type>Date</type>
</CustomField>