unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Lugar_de_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_Nacimiento__c</fullName>
    <label>Lugar de Nacimiento Cesión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lugar_Nacimiento</valueSetName>
    </valueSet>
</CustomField>