unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Miembros_del_Consejo_3__c.field-meta.xml
<CustomField>
    <fullName>Miembros_del_Consejo_3__c</fullName>
    <label>Miembros del Consejo 3 Cesión</label>
    <length>250</length>
    <type>Text</type>
</CustomField>