unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Monitor__c.field-meta.xml
<CustomField>
    <fullName>Monitor__c</fullName>
    <formula>CASE(Evalua_Monitor__c,
&quot;1&quot;, IMAGE(&quot;/resource/Monitor_Corto_1_0&quot;, &quot;Monitor&quot;, 130,350),
&quot;2&quot;, IMAGE(&quot;/resource/Monitor_Corto_1_1?&quot;, &quot;Monitor&quot;, 130,350),
IMAGE(&quot;/resource/1690922152000/Monitor_Corto_1_0?&quot;, &quot;Monitor&quot;, 130,350)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monitor Cesión Cesión</label>
    <type>Text</type>
</CustomField>