unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Monto_Total_a_Aportar__c.field-meta.xml
<CustomField>
    <fullName>Monto_Total_a_Aportar__c</fullName>
    <label>Monto Total a Aportar Cesión</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>