unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Municipio__c.field-meta.xml
<CustomField>
    <fullName>Municipio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Municipio Cesión</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Estado__c</field>
            <operation>equals</operation>
            <valueField>Municipio__c.Estado__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Cesiones a Otra Persona Física o Moral</relationshipLabel>
    <relationshipName>Cesiones_a_Otra_Persona_F_sica_o_Moral</relationshipName>
    <type>Lookup</type>
</CustomField>