unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/No_Escritura__c.field-meta.xml
<CustomField>
    <fullName>No_Escritura__c</fullName>
    <label>No. Escritura Cesión</label>
    <length>15</length>
    <type>Text</type>
</CustomField>