unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/No_Identificacion__c.field-meta.xml
<CustomField>
    <fullName>No_Identificacion__c</fullName>
    <label>No. Identificación Cesión</label>
    <length>30</length>
    <type>Text</type>
</CustomField>