unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Nombre_de_la_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_Empresa__c</fullName>
    <label>Nombre de la Empresa Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>