unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Notaria__c.field-meta.xml
<CustomField>
    <fullName>Notaria__c</fullName>
    <label>Notaría Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>