unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Notario_Corredor_del_Poder__c.field-meta.xml
<CustomField>
    <fullName>Notario_Corredor_del_Poder__c</fullName>
    <label>Notario / Corredor del Poder Cesión</label>
    <length>100</length>
    <type>Text</type>
</CustomField>