unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Notario_Empresa_Laboral_Rep_Legal__c.field-meta.xml
<CustomField>
    <fullName>Notario_Empresa_Laboral_Rep_Legal__c</fullName>
    <label>Notario Empresa Laboral  Rep Legal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>