unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Num_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Num_Exterior__c</fullName>
    <label>Núm. Exterior Cesión</label>
    <length>10</length>
    <type>Text</type>
</CustomField>