unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Num_Interior__c.field-meta.xml
<CustomField>
    <fullName>Num_Interior__c</fullName>
    <label>Núm. Interior Cesión</label>
    <length>10</length>
    <type>Text</type>
</CustomField>