unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Pais_de_Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Pais_de_Nacionalidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de Nacionalidad Cesión</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Cesiones a Otra Persona Física o Moral (País de Nacimiento)</relationshipLabel>
    <relationshipName>Cesiones_a_Otra_Persona_F_sica_o_Moral2</relationshipName>
    <type>Lookup</type>
</CustomField>