unpackaged/main/default/objects/Cesion_a_Otra_Persona_Fisica_o_Moral__c/fields/Porcentaje_Accionistas1__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Accionistas1__c</fullName>
    <label>Porcentaje Accionistas 1 Cesión</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>